test/typecheck/bad-callindirect-func-type-mismatch.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (table funcref (elem 0))
  (type $t (func))
  (func 
    f32.const 0
    call_indirect (type $t)))
(;; STDERR ;;;
out/test/typecheck/bad-callindirect-func-type-mismatch.txt:8:5: error: type mismatch in call_indirect, expected [i32] but got [f32]
    call_indirect (type $t)))
    ^^^^^^^^^^^^^
;;; STDERR ;;)
